# sidekick

./: .gitignore  README.md  package.json  pnpm-lock.yaml  test_appserver.mjs  tsconfig.base.json
apps/desktop/: index.html  package.json
apps/desktop/src/: App.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/components/: ApprovalModal.tsx  ChatPanel.tsx  LogDrawer.tsx  SessionModal.tsx  Sidebar.tsx  TimelinePanel.tsx  WorkspaceModal.tsx
apps/desktop/src/lib/: client.ts  hostClient.ts  mockClient.ts
apps/host/: package.json  tsconfig.json
apps/host/migrations/: 001_init.sql
apps/host/src/: index.ts  server.ts
apps/host/src/agent/: manager.ts  mockTransport.ts  transportFactory.ts
apps/host/src/db/: memoryStore.ts  store.ts
apps/host/src/policy/: index.ts
